# couchbase-cxx-client-demo

./: CMakeLists.txt  README.md  minimal.cpp
.github/workflows/: test.yml
examples/: CMakeLists.txt  inventory_with_opentelemetry.cpp  ledger_with_csv_encoding.cpp  minimal.cpp  minimal_query.cpp  minimal_search.cpp  minimal_with_char_array.cpp  transactions_basic_transfer.cpp  transactions_transfer_basic.cpp  transactions_transfer_read_replica.cpp  transactions_transfer_with_binary_objects.cpp
telemetry-cluster/: README.md  docker-compose.yml  otel-collector-config.yaml  prometheus.yml
